--- a/source-repository.html
+++ b/source-repository.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - Source Repository</title>
+    <title>Phone Bill Web/REST Project - Source Repository</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                CS410J Phone Bill Project
+                Phone Bill Web/REST Project
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-01</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="CS410J Phone Bill Project">CS410J Phone Bill Project</a>
+            <div class="xright">                    <a href="./" title="Phone Bill Web/REST Project">Phone Bill Web/REST Project</a>
               
                     
       </div>
@@ -85,9 +85,6 @@
             </li>
               </ul>
         </li>
-                                                                                                                                                                                <li class="collapsed">
-                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
-                  </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
