--- a/dependency-management.html
+++ b/dependency-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Phone Bill GWT Application - Project Summary</title>
+    <title>Phone Bill GWT Application - Project Dependency Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -63,8 +63,8 @@
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
             </li>
                       <li class="none">
-                          <a href="dependency-management.html" title="Dependency Management">Dependency Management</a>
-            </li>
+            <strong>Dependency Management</strong>
+          </li>
                       <li class="none">
                           <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
             </li>
@@ -84,8 +84,8 @@
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
                       <li class="none">
-            <strong>Project Summary</strong>
-          </li>
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+            </li>
               </ul>
         </li>
           </ul>
@@ -99,55 +99,130 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a>
+<h2>Project Dependency Management<a name="Project_Dependency_Management"></a></h2><a name="Project_Dependency_Management"></a>
 <div class="section">
-<h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a>
+<h3>compile<a name="compile"></a></h3><a name="compile"></a>
+<p>The following is a list of compile dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run the submodule:</p>
 <table border="0" class="bodyTable">
 <tr class="a">
-<th>Field</th>
-<th>Value</th></tr>
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th>
+<th>Classifier</th>
+<th>Type</th>
+<th>License</th></tr>
 <tr class="b">
-<td>Name</td>
-<td>Phone Bill GWT Application</td></tr>
+<td>com.google.gwt</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/gwt-codeserver/">gwt-codeserver</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="a">
-<td>Description</td>
-<td>Example Java Code for CS410J: Advanced Java Programming at Portland State University</td></tr>
+<td>com.google.gwt</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/gwt-dev/">gwt-dev</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="b">
-<td>Homepage</td>
-<td><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt">http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt</a></td></tr></table></div>
-<div class="section">
-<h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
-<table border="0" class="bodyTable">
+<td>com.google.gwt</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/gwt-elemental/">gwt-elemental</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="a">
-<th>Field</th>
-<th>Value</th></tr>
+<td>com.google.gwt</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/gwt-servlet/">gwt-servlet</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="b">
-<td>Name</td>
-<td>Portland State University</td></tr>
+<td>com.google.gwt</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/gwt-user/">gwt-user</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="a">
-<td>URL</td>
-<td><a class="externalLink" href="http://www.pdx.edu">http://www.pdx.edu</a></td></tr></table></div>
-<div class="section">
-<h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Field</th>
-<th>Value</th></tr>
+<td>com.google.web.bindery</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/doc/latest/DevGuideRequestFactory.html/requestfactory-apt">requestfactory-apt</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="b">
-<td>GroupId</td>
-<td>edu.pdx.cs410J.minesweeper</td></tr>
+<td>com.google.web.bindery</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/doc/latest/DevGuideRequestFactory.html/requestfactory-client">requestfactory-client</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="a">
-<td>ArtifactId</td>
-<td>minesweeper-gwt</td></tr>
+<td>com.google.web.bindery</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/doc/latest/DevGuideRequestFactory.html/requestfactory-server">requestfactory-server</a></td>
+<td>2.7.0</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.gwtproject.org/terms.html">GWT Terms</a></td></tr>
 <tr class="b">
-<td>Version</td>
-<td>Summer2015</td></tr>
+<td>javax.validation</td>
+<td>validation-api</td>
+<td>1.0.0.GA</td>
+<td>sources</td>
+<td>jar</td>
+<td>license.txt</td></tr>
 <tr class="a">
-<td>Type</td>
-<td>war</td></tr>
+<td>javax.validation</td>
+<td>validation-api</td>
+<td>1.0.0.GA</td>
+<td>-</td>
+<td>jar</td>
+<td>license.txt</td></tr>
 <tr class="b">
-<td>Java Version</td>
-<td>1.7</td></tr></table></div></div>
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm/">asm</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr>
+<tr class="a">
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm-analysis/">asm-analysis</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr>
+<tr class="b">
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm-commons/">asm-commons</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr>
+<tr class="a">
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm-tree/">asm-tree</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr>
+<tr class="b">
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm-util/">asm-util</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr>
+<tr class="a">
+<td>org.ow2.asm</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/asm-xml/">asm-xml</a></td>
+<td>5.0.3</td>
+<td>-</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://asm.objectweb.org/license.html">BSD</a></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
